--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -50,6 +50,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>org.mapstruct</groupId>
+    <artifactId>mapstruct</artifactId>
+    <version>1.5.5.Final</version> 
+    
+</dependency>
+	<dependency>
+	 <groupId>io.springfox</groupId>
+	 <artifactId>springfox-swagger2</artifactId>
+	  <version>2.6.0</version>
+	</dependency>
+	<dependency>
+	<groupId> io.springfox </groupId>
+	<artifactId>springfox-swagger-ui</artifactId>
+	 <version>2.6.0</version>
+	</dependency>
 	</dependencies>
 
 	<build>
