--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 jwt.secret=lejla2409
 jwt.expiration=3600000
+spring.datasource.url=jdbc:mysql://localhost:3306/elearning?createDatabaseIfNotExist=true
+spring.datasource.username=Lejla
+spring.datasource.password=lejlaomerspahic
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.main.allow-circular-references=true
