--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -64,6 +64,22 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>4.0.1</version>       
+        <scope>provided</scope> 
+        </dependency>
+<dependency>
+	 <groupId>io.springfox</groupId>
+	 <artifactId>springfox-swagger2</artifactId>
+	  <version>3.0.0</version>
+	</dependency>
+	<dependency>
+	<groupId> io.springfox </groupId>
+	<artifactId>springfox-swagger-ui</artifactId>
+	 <version>3.0.0</version>
+	</dependency>
 
 	</dependencies>
 
