--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -55,6 +55,12 @@
 			<version>0.11.5</version>
 		</dependency>
 		<dependency>
+    <groupId>org.mapstruct</groupId>
+    <artifactId>mapstruct</artifactId>
+    <version>1.4.2.Final</version> 
+</dependency>
+
+		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
