--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.main.allow-circular-references=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
+spring.mapstruct.default-component-model=default
