--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/elearning?createDatabaseIfNotExist=true
 spring.datasource.username=Lejla
 spring.datasource.password=lejlaomerspahic
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
