--- a/app/pom.xml
+++ b/app/pom.xml
@@ -37,9 +37,15 @@
     <dependency>
     <groupId>org.mapstruct</groupId>
     <artifactId>mapstruct</artifactId>
-    <version>1.4.2.Final</version> 
-
+    <version>1.4.2.Final</version>
 </dependency>
+<dependency>
+    <groupId>org.mapstruct</groupId>
+    <artifactId>mapstruct-processor</artifactId>
+    <version>1.4.2.Final</version>
+    <scope>provided</scope>
+</dependency>
+
 
     <dependency>
         <groupId>org.springframework.boot</groupId>
