--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/elearning?createDatabaseIfNotE
 spring.datasource.username=Lejla
 spring.datasource.password=lejlaomerspahic
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.main.allow-circular-references=true
 server.port=8081
+logging.level.root=INFO
+logging.level.elearning.app=DEBUG
