--- a/app/pom.xml
+++ b/app/pom.xml
@@ -46,6 +46,11 @@
     <scope>provided</scope>
 </dependency>
 
+<dependency>
+    <groupId>com.stripe</groupId>
+    <artifactId>stripe-java</artifactId>
+    <version>1.40.0</version>
+</dependency>
 
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -56,6 +61,11 @@
         <artifactId>jjwt</artifactId>
         <version>0.9.1</version>
     </dependency>
+    <dependency>
+    <groupId>com.stripe</groupId>
+    <artifactId>stripe-java</artifactId>
+    <version>20.89.0</version>
+</dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-security</artifactId>
